<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name" translatable="true">Scrolls of Adventure</string>
    <string name="select_character" translatable="true">Select Character</string>
    <string name="create_character" translatable="true">Create Character</string>
    <string name="customize" translatable="true">Customize</string>
    <string name="in_progress" translatable="true">In Progress</string>
    <string name="action_settings" translatable="true">Settings</string>
    <string name="name" translatable="true">Name: </string>
    <string name="age" translatable="true">Age: </string>
    <string name="weight" translatable="true">Weight: </string>
    <string name="height" translatable="true">Height: </string>
    <string name="gender" translatable="true">Gender: </string>
    <string name="male" translatable="true">Male</string>
    <string name="female" translatable="true">Female</string>
    <string name="race" translatable="true">Race: </string>
    <string name="default_race" translatable="true">Click to select race</string>
    <string name="human" translatable="true">Human</string>
    <string name="dwarf" translatable="true">Elf</string>
    <string name="elf" translatable="true">Dwarf</string>
    <string-array name="race_array" translatable="false">
        <item name="default_race" translatable="false">@string/default_race</item>
        <item name="human" translatable="false">@string/human</item>
        <item name="dwarf" translatable="false">@string/elf</item>
        <item name="elf" translatable="false">@string/dwarf</item>
    </string-array>
    <string name="religion" translatable="true">Religion: </string>
    <string name="religion1" translatable="true">religion1</string>
    <string name="religion2" translatable="true">religion2</string>
    <string name="religion3" translatable="true">religion3</string>
    <string name="religion4" translatable="true">religion4</string>
    <string name="alignment" translatable="true">Alignment: </string>
    <string name="default_align" translatable="true">Click to select alignment</string>
    <string name="lawful_good" translatable="true">Lawful Good</string>
    <string name="lawful_neutral" translatable="true">Lawful Neutral</string>
    <string name="lawful_evil" translatable="true">Lawful Evil</string>
    <string name="neutral_good" translatable="true">Neutral Good</string>
    <string name="neutral" translatable="true">Neutral</string>
    <string name="neutral_evil" translatable="true">Neutral Evil</string>
    <string name="chaotic_good" translatable="true">Chaotic Good</string>
    <string name="chaotic_neutral" translatable="true">Chaotic Neutral</string>
    <string name="chaotic_evil" translatable="true">Chaotic Evil</string>
    <string-array name="align_array" translatable="false">
        <item name="default_race" translatable="false">@string/default_align</item>
        <item name="lawful_good" translatable="false">@string/lawful_good</item>
        <item name="lawful_neutral" translatable="false">@string/lawful_neutral</item>
        <item name="lawful_evil" translatable="false">@string/lawful_evil</item>
        <item name="neutral_good" translatable="false">@string/neutral_good</item>
        <item name="neutral" translatable="false">@string/neutral</item>
        <item name="neutral_evil" translatable="false">@string/neutral_evil</item>
        <item name="chaotic_good" translatable="false">@string/chaotic_good</item>
        <item name="chaotic_neutral" translatable="false">@string/chaotic_neutral</item>
        <item name="chaotic_evil" translatable="false">@string/chaotic_evil</item>
    </string-array>
    <string name="class_prompt" translatable="true">Class: </string>
    <string name="default_class" translatable="true">Click to select class</string>
    <string name="cleric" translatable="true">Cleric</string>
    <string name="fighter" translatable="true">Fighter</string>
    <string name="rogue" translatable="true">Rogue</string>
    <string name="wizard" translatable="true">Wizard</string>
    <string-array name="class_array" translatable="false">
        <item name="default_class" translatable="false">@string/default_class</item>
        <item name="cleric" translatable="false">@string/cleric</item>
        <item name="fighter" translatable="false">@string/fighter</item>
        <item name="rogue" translatable="false">@string/rogue</item>
        <item name="wizard" translatable="false">@string/wizard</item>
    </string-array>
    <string name="total_level" translatable="true">Level: <xliff:g id="level">%1$d</xliff:g></string>
    <string name="experience" translatable="true">Experience: <xliff:g id="experience">%1$d</xliff:g></string>
    <string name="ability_scores" translatable="true">Ability Scores: </string>
    <string name="ability_scores_prompt" translatable="true">Choose Ability Scores</string>
    <string name="confirm_ability" translatable="true">Confirm Choices</string>
    <string name="reroll_ability" translatable="true">Re-Roll Scores</string>
    <string name="strength" translatable="true">Strength: </string>
    <string name="dexterity" translatable="true">Dexterity: </string>
    <string name="constitution" translatable="true">Constitution: </string>
    <string name="intelligence" translatable="true">Intelligence: </string>
    <string name="wisdom" translatable="true">Wisdom: </string>
    <string name="charisma" translatable="true">Charisma: </string>
    <string name="base_attack" translatable="true">Base Attack Bonus: </string>
    <string name="saving_throws" translatable="true">Saving Throws: </string>
    <string name="fort_save" translatable="true">Fortitude: </string>
    <string name="ref_save" translatable="true">Reflex: </string>
    <string name="will_save" translatable="true">Will: </string>
    <string name="money" translatable="true">Money: <xliff:g id="money">%1$.2f</xliff:g></string>
    <string name="money_left" translatable="true">Money Remaining: <xliff:g id="money">%1$.2f</xliff:g></string>
    <string name="light_load" translatable="true">Light Load: </string>
    <string name="medium_load" translatable="true">Medium Load: </string>
    <string name="heavy_load" translatable="true">Heavy Load: </string>
    <string name="ac" translatable="true">AC: </string>
    <string name="hp_max" translatable="true">HP Max: </string>
    <string name="hp_current" translatable="true">HP Current: </string>
    <string name="title_activity_skills">SkillsActivity</string>
    <string name="skills" translatable="true">Skills: </string>
    <string name="skill_points_left" translatable="true">Skill Points Left: <xliff:g id="points">%1$d</xliff:g></string>
    <string name="select_skills" translatable="true">Select Skills</string>
    <string name="appraise" translatable="true">Appraise</string>
    <string name="balance" translatable="true">Balance</string>
    <string name="bluff" translatable="true">Bluff</string>
    <string name="climb" translatable="true">Climb</string>
    <string name="concentrate" translatable="true">Concentrate</string>
    <string name="decipher_script" translatable="true">Decipher Script</string>
    <string name="diplomacy" translatable="true">Diplomacy</string>
    <string name="disable_device" translatable="true">Disable Device</string>
    <string name="disguise" translatable="true">Disguise</string>
    <string name="escape_artist" translatable="true">Escape Artist</string>
    <string name="forgery" translatable="true">Forgery</string>
    <string name="gather_information" translatable="true">Gather Information</string>
    <string name="heal" translatable="true">Heal</string>
    <string name="hide" translatable="true">Hide</string>
    <string name="intimidate" translatable="true">Intimidate</string>
    <string name="jump" translatable="true">Jump</string>
    <string name="knowledge_arcana" translatable="true">Knowledge (arcana)</string>
    <string name="knowledge_architecture" translatable="true">Knowledge (architecture and engineering)</string>
    <string name="knowledge_dungeoneering" translatable="true">Knowledge (dungeoneering)</string>
    <string name="knowledge_geography" translatable="true">Knowledge (geography)</string>
    <string name="knowledge_history" translatable="true">Knowledge (history)</string>
    <string name="knowledge_local" translatable="true">Knowledge (local)</string>
    <string name="knowledge_nature" translatable="true">Knowledge (nature)</string>
    <string name="knowledge_nobility" translatable="true">Knowledge (nobility and royalty)</string>
    <string name="knowledge_religion" translatable="true">Knowledge (religion)</string>
    <string name="knowledge_planes" translatable="true">Knowledge (the planes)</string>
    <string name="listen" translatable="true">Listen</string>
    <string name="move_silently" translatable="true">Move Silently</string>
    <string name="open_lock" translatable="true">Open Lock</string>
    <string name="ride" translatable="true">Ride</string>
    <string name="search" translatable="true">Search</string>
    <string name="sense_motive" translatable="true">Sense Motive</string>
    <string name="slight_of_hand" translatable="true">Slight of Hand</string>
    <string name="speak_language" translatable="true">Speak Language</string>
    <string name="spellcraft" translatable="true">Spellcraft</string>
    <string name="spot" translatable="true">Spot</string>
    <string name="survival" translatable="true">Survival</string>
    <string name="swim" translatable="true">Swim</string>
    <string name="tumble" translatable="true">Tumble</string>
    <string name="use_magic_device" translatable="true">Use Magic Device</string>
    <string name="use_rope" translatable="true">Use Rope</string>
    <string name="title_activity_feats">FeatsActivity</string>
    <string name="feats" translatable="true">Feats: </string>
    <string name="select_feats" translatable="true">Select Feats</string>
    <string name="select_domains" translatable="true">Selected Domains: <xliff:g id="curr">%1$d</xliff:g>/2</string>
    <string name="domain_air" translatable="true">Air</string>
    <string name="domain_animal" translatable="true">Animal</string>
    <string name="domain_chaos" translatable="true">Chaos</string>
    <string name="domain_death" translatable="true">Death</string>
    <string name="domain_destruction" translatable="true">Destruction</string>
    <string name="domain_earth" translatable="true">Earth</string>
    <string name="domain_evil" translatable="true">Evil</string>
    <string name="domain_fire" translatable="true">Fire</string>
    <string name="domain_good" translatable="true">Good</string>
    <string name="domain_healing" translatable="true">Healing</string>
    <string name="domain_knowledge" translatable="true">Knowledge</string>
    <string name="domain_law" translatable="true">Law</string>
    <string name="domain_luck" translatable="true">Luck</string>
    <string name="domain_magic" translatable="true">Magic</string>
    <string name="hp_prompt" translatable="true">HP: </string>
    <string name="select_deity" translatable="true">Select Deity</string>
    <string name="select_spells" translatable="true">Select Spells</string>
    <string name="select_familiar" translatable="true">Select Familiar</string>
    <string name="banner_ad_unit_id">ca-app-pub-3853684716235342/7592488913</string>
    <string name="login_text" translatable="true">Log In</string>
    <string name="logout_text" translatable="true">Log Out</string>
    <string name="mock_ac" translatable="true">AC = 26</string>
    <string name="armor" translatable="true">Armor</string>
    <string name="weapon" translatable="true">Weapons</string>
    <string name="item" translatable="true">Items</string>
    <string name="minus" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>
</resources>