<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/scroll"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/armor_class"
            android:text="@string/mock_ac"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="launchArmorSelector"
            android:text="@string/armor"
            android:contentDescription="@string/armor" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="launchWeaponSelector"
            android:text="@string/weapon"
            android:contentDescription="@string/weapon" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="launchItemSelector"
            android:text="@string/item"
            android:contentDescription="@string/item" />

    </LinearLayout>

</FrameLayout>