<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/skill_name"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/skills"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:id="@+id/minus_button"
            android:text="@string/minus"
            android:contentDescription="@string/minus"/>


        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/skill_ranks"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:id="@+id/plus_button"
            android:text="@string/plus"
            android:contentDescription="@string/plus"/>
    </LinearLayout>



</LinearLayout>